[tool.poetry]
name = "pyntelope"
version = "0.7.0"
description = "Interact with Antelope blockchains"
authors = ["Team <pyntelope@facings.io>"]
homepage = "https://github.com/FACINGS/pyntelope"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
httpx = ">=0.22"
pycryptodome = "^3.15.0"
base58 = "^2.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-isort = "^4.1.1"
flake8-docstrings = "^1.6.0"
pytest-timeout = "^2.0.1"
pytest-rerunfailures = "^10.2"
pytest-httpx = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=pyntelope"
testpaths = ["tests/unit"]
log_level = "DEBUG"

[tool.black]
line-length = 79

[tool.pydocstyle]
match_dir = '^(?!tests)[^\.].+$'
